--- a/Chatter/app/src/main/AndroidManifest.xml
+++ b/Chatter/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_question_mark_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LayoutActivity"></activity>
+        <activity android:name=".ColorSpinnerActivity"></activity>
+        <activity android:name=".LayoutActivity" />
         <activity android:name=".PrefsActivity" />
         <activity android:name=".CustomListActivity" />
         <activity android:name=".SystemListActivity" />
