--- a/Week06/app/src/main/AndroidManifest.xml
+++ b/Week06/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BaseActivity"></activity>
+        <activity android:name=".FragmentActivity"></activity>
+        <activity android:name=".BaseActivity" />
         <activity android:name=".CursorActivity" />
         <activity android:name=".DisplayActivity" />
         <activity android:name=".PrefsActivity" />
